# cpptemplate

./: CMakeLists.txt  readme.md  test.cpp  test_IsConvertibleT.cpp  test_IsDefaultConstructibleT.cpp  test_concepts.cpp  test_concepts2.cpp  test_const_ref.cpp  test_constexpr.cpp  test_lambdas_SFINAE.cpp  test_partial_specialization.cpp  test_template_specialization.cpp  test_ts_remove_pointer.cpp  test_type_inference.cpp
app/: CMakeLists.txt  app_any.cpp  app_decay.cpp  app_enable_if.cpp  app_function_traits.cpp  app_integral.cpp  app_is_const.cpp  app_is_same.cpp  app_lazy.cpp  app_optional.cpp  app_remove_const.cpp  readme.md
type_traits/: CMakeLists.txt  traits_conditional.cpp  traits_decay.cpp  traits_enable_if.cpp  traits_result_of.cpp  traits_revise_type.cpp  traits_single_type.cpp  traits_test.cpp  traits_two_types.cpp  traits_void_t.cpp
